Added: Web Lab1 info icons hyperlinks

--- a/Web projects/Lab1/index.html
+++ b/Web projects/Lab1/index.html
@@ -16,7 +16,8 @@
         <div class="info-column left-side-column">
             <span class="info-row">
                 <img class="info-icon" src="icons/loc.svg" draggable="false"/>
-                <span class="info-font">Saint-Petersburg</span>
+                <a class="info-font" href="https://www.google.com/maps/place/Ozerki/@60.0328006,30.3399083,14.5z/data=!4m5!3m4!1s0x469634f2be71632d:0x4c308cf16d86a4c9!8m2!3d60.0371438!4d30.3216219"
+                 target="_blank">Saint-Petersburg</a>
             </span>
 
             <span class="info-row">
@@ -26,7 +27,7 @@
 
             <span class="info-row">
                 <img class="info-icon" src="icons/mail.svg" draggable="false"/>
-                <span class="info-font">rauba.max@mail.ru</span>
+                <a class="info-font" href="mailto:rauba.max@mail.ru">rauba.max@mail.ru</a>
             </span>
         </div>
 
@@ -39,16 +40,16 @@
         <div class="info-column right-side-column">
             <span class="socials-row">
                 <a class="socials-icon" href="https://vk.com/raubamax" target="_blank">
-                    <img src="icons/vk.svg">
+                    <img src="icons/vk.svg" draggable="false">
                 </a>
 
                 <a class="socials-icon" href="https://t.me/cooomman" target="_blank">
-                    <img src="icons/telegram.svg">
+                    <img src="icons/telegram.svg" draggable="false">
                 </a>
             </span>
             
             <a class="socials-icon" href="https://github.com/coomman" target="_blank">
-                <img src="icons/github.svg">
+                <img src="icons/github.svg" draggable="false">
             </a>  
         </div>
     </header>
