--- a/Web projects/Lab1/index.html
+++ b/Web projects/Lab1/index.html
@@ -233,7 +233,7 @@
             </div>
         </section>
 
-        <div class="section-row space-between">
+        <!-- <div class="section-row space-between">
             <section class="send-message">
                 <div class="section-content">
                     <textarea class="send-message-input"></textarea>
@@ -248,7 +248,7 @@
                     </div>
                 </div>
             </section>
-        </div>
+        </div> -->
     </main>
 
     <footer>
